# Cyber-Lite

./: .gitignore  LICENSE  README.md  install-dependencies.sh  package-lock.json
backend/: CMakeLists.txt
backend/sql/: 001_init.sql
backend/src/: App.cpp  AppComponent.hpp  CMakeLists.txt  SwaggerComponent.hpp
backend/src/Controller/: Controller.hpp  TaskDataController.hpp
backend/src/DTOs/: Dtos.hpp  StatusDto.hpp  TaskDtos.hpp  UserDtos.hpp
backend/src/Database/: Database.hpp  DatabaseComponent.hpp
backend/src/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.hpp
backend/src/Tasks/: Tasks.cpp  Tasks.hpp
backend/src/Tasks/Questions/: Questions.cpp  Questions.hpp
backend/src/Users/: Users.cpp  Users.hpp
backend/tests/: CMakeLists.txt  test.cpp
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: dark-mode.css  light-mode.css
frontend/src/: App.svelte  app.html
frontend/src/routes/: +page.svelte
frontend/src/routes/dash/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/task/: +page.svelte
frontend/src/routes/task/[taskId]/: +page.svelte  +server.js
frontend/src/routes/tasks/: CONTENT.md  mds_show.svelte  mdstyle.css
tasks/BasicAttacks/: CATEGORIES  DESCRIPTION.md
tasks/Communication_Attacks/: CATEGORIES  CONTENT.md  DESCRIPTION.md  QUESTIONS.json
tasks/Corporation_Solution/: CATEGORIES  CONTENT.md  DESCRIPTION.md  QUESTIONS.json
tasks/Hat_terminology/: CATEGORIES  CONTEND.md  CONTENT.md  DESCRIPTION.md  QUESTIONS.json
tasks/Social_engineering/: CATEGORIES  CONTENT.md  DESCRIPTION.md  QUESTIONS.json
tasks/example/: CATEGORIES  CONTENT.md  DESCRIPTION.md  QUESTIONS.json
